--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,5 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+monitor_speed = 115200
