--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,4 @@ board = esp32dev
 framework = arduino
 lib_deps = ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 monitor_speed = 115200
+board_build.partitions = minimal.csv
