--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+lib_deps = 
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	bblanchon/ArduinoJson@^6.21.2
 monitor_speed = 115200
 board_build.partitions = minimal.csv
