--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
-board = esp32dev
+platform = espressif8266
+board = esp12e
 framework = arduino
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.21.2
+	vshymanskyy/Preferences@^2.1.0
 monitor_speed = 115200
 board_build.partitions = minimal.csv
+board_build.filesystem = littlefs
