--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env]
+framework = arduino
+monitor_speed = 115200
+board_build.partitions = minimal.csv
+
+[env:esp8266]
 platform = espressif8266
 board = esp12e
-framework = arduino
+board_build.filesystem = littlefs
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.21.2
 	vshymanskyy/Preferences@^2.1.0
-monitor_speed = 115200
-board_build.partitions = minimal.csv
-board_build.filesystem = littlefs
+
+[env:esp32]
+platform = espressif32
+board = esp32dev
+lib_deps = 
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	bblanchon/ArduinoJson@^6.21.2
+
+
